--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,13 @@ classifiers = [
 ]
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
+#license = { file = "LICENSE.txt" }
 
 [project.urls]
 repository = "https://github.com/MWilson1/dipperpy"
+"Curriculum Vitae" = "https://www.mauricewilson.com"
+
+[tool.setuptools]
+package-data = { "dipperpy" = ["*.db"] }
+
 
